--- a/notebook/bash.qmd
+++ b/notebook/bash.qmd
@@ -9,11 +9,33 @@ format:
    gfm:
      html-math-method: webtex
      toc: true
+engine: knitr
 ---
 
-Generating [GitHub Flavoured
-Markdown](https://quarto.org/docs/output-formats/gfm.html) (GFM); see [GFM
-Options](https://quarto.org/docs/reference/formats/markdown/gfm.html).
+The [principal languages supported by
+Quarto](https://quarto.org/docs/faq/#what-programming-languages-are-supported-in-quarto)
+are Python, R, Julia, and Observable JavaScript. Each Quarto document can be
+optionally processed by a computational engine; the engine can be manually
+specified or automatically detected based on the code chunks in the document.
+For a `.qmd` document, the Knitr engine will be used if the is an `{r}` block;
+the Jupyter engine will be used if there are any other executable code block,
+such as `{python}`, `{julia}`, and `{bash}`, etc. However, we can override this
+by explicitly [stating the
+engine](https://quarto.org/docs/computations/execution-options.html#engine-binding).
+
+Knitr supports the following languages.
+
+```{r}
+names(knitr::knit_engines$get())
+```
+
+## Output format
+
+For displaying the output on GitHub, we can use [GitHub Flavoured
+Markdown](https://quarto.org/docs/output-formats/gfm.html) (GFM) by specifying
+`gfm` as our format in the YAML. See [GFM
+Options](https://quarto.org/docs/reference/formats/markdown/gfm.html) for a
+list of GFM output options.
 
 ## Hello, World
 
@@ -39,15 +61,4 @@ Bash version used.
 #| label: bash_version
 
 bash --version
-```
-
-<!-- If I do not include a R code block, Jupyter Notebook is used and the
-document does not render properly. -->
-
-```{r}
-#| label: session_info
-#| echo: false
-#| output: false
-
-sessionInfo()
 ```
