--- a/index.qmd
+++ b/index.qmd
@@ -6,3 +6,5 @@ format: html
 ## Learning Quarto
 
 Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+
+* [GraphViz](notebook/graphviz.html)
