--- a/index.qmd
+++ b/index.qmd
@@ -7,8 +7,13 @@ format: html
 
 Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
 
+## Notebooks
+
 * [Hello World](notebook/hello.html)
 * [GraphViz](notebook/graphviz.html)
 * [Authoring](notebook/authoring.html)
 * [Computations](notebook/computations.html)
 
+## Presentations
+
+* [Sandbox](presentation/sandbox.html)
