--- a/presentation/sandbox.qmd
+++ b/presentation/sandbox.qmd
@@ -1,7 +1,11 @@
 ---
 title: "Sandbox"
 author: "Dave Tang"
-format: revealjs
+format:
+  revealjs:
+    theme: league
+    mermaid:
+      theme: dark
 ---
 
 ## Quarto
@@ -22,6 +26,23 @@ When you click the **Render** button a presentation will be generated that inclu
 ```{r}
 1 + 1
 ```
+
+## User Journey
+
+```{mermaid}
+%%| fig-width: 10
+%%| fig-height: 6
+journey
+    title My working day
+    section Go to work
+      Make tea: 5: Me
+      Go upstairs: 3: Me
+      Do work: 1: Me, Cat
+    section Go home
+      Go downstairs: 5: Me
+      Sit down: 5: Me
+```
+
 
 ## Auto animate
 
