--- a/presentation/sandbox.qmd
+++ b/presentation/sandbox.qmd
@@ -43,6 +43,40 @@ journey
       Sit down: 5: Me
 ```
 
+## Gantt diagram
+
+```{mermaid}
+gantt
+    dateFormat  YYYY-MM-DD
+    title       Adding GANTT diagram functionality to mermaid
+    excludes    weekends
+    %% (`excludes` accepts specific dates in YYYY-MM-DD format, days of the week ("sunday") or "weekends", but not the word "weekdays".)
+
+    section A section
+    Completed task            :done,    des1, 2024-01-06,2024-01-08
+    Active task               :active,  des2, 2024-01-09, 3d
+    Future task               :         des3, after des2, 5d
+    Future task2              :         des4, after des3, 5d
+
+    section Critical tasks
+    Completed task in the critical line :crit, done, 2024-01-06,24h
+    Implement parser and json          :crit, done, after des1, 2d
+    Create tests for parser             :crit, active, 3d
+    Future task in critical line        :crit, 5d
+    Create tests for renderer           :2d
+    Add to mermaid                      :1d
+    Functionality added                 :milestone, 2024-01-25, 0d
+
+    section Documentation
+    Describe Gantt syntax               :active, a1, after des1, 3d
+    Add Gantt diagram to demo page      :after a1  , 20h
+    Add another diagram to demo page    :doc1, after a1  , 48h
+
+    section Last section
+    Describe Gantt syntax               :after doc1, 3d
+    Add Gantt diagram to demo page      :20h
+    Add another diagram to demo page    :48h
+```
 
 ## Auto animate
 
@@ -80,6 +114,21 @@ output$phonePlot <- renderPlot({
           ylab="Number of Telephones",
           xlab="Year")
 })
+```
+
+## Code animation {auto-animate=true}
+
+```r
+# Fill in the spot we created for a plot
+output$phonePlot <- renderPlot({
+  # Render a barplot
+})
+```
+```r
+barplot(WorldPhones[,input$region]*1000, 
+        main=input$region,
+        ylab="Number of Telephones",
+        xlab="Year")
 ```
 
 ## Movement animation {auto-animate=true}
