Quick demo of Quarto extensions

--- a/index.qmd
+++ b/index.qmd
@@ -16,5 +16,6 @@ Quarto enables you to weave together content and executable code into a finished
 
 ## Presentations
 
+* [Extensions](presentation/extensions.html)
 * [Features](presentation/features.html)
 * [Sandbox](presentation/sandbox.html)
